--- a/db/placar.lpc.html
+++ b/db/placar.lpc.html
@@ -15,4 +15,148 @@
 <TH>Input only Bidir</TH>
 <TH>Output only Bidir</TH>
 </TR>
+<TR >
+<TD >soma|r7</TD>
+<TD >3</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >2</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >soma|r6</TD>
+<TD >3</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >2</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >soma|r5</TD>
+<TD >3</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >2</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >soma|r4</TD>
+<TD >3</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >2</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >soma|r3</TD>
+<TD >3</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >2</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >soma|r2</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >2</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >soma|r1</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >2</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >soma</TD>
+<TD >10</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >entradas</TD>
+<TD >3</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >2</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
 </TABLE>
