--- a/db/placar.lpc.html
+++ b/db/placar.lpc.html
@@ -16,7 +16,7 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
-<TD >r7</TD>
+<TD >r1|r7</TD>
 <TD >3</TD>
 <TD >1</TD>
 <TD >0</TD>
@@ -32,7 +32,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >r6</TD>
+<TD >r1|r6</TD>
 <TD >3</TD>
 <TD >1</TD>
 <TD >0</TD>
@@ -48,7 +48,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >r5</TD>
+<TD >r1|r5</TD>
 <TD >3</TD>
 <TD >1</TD>
 <TD >0</TD>
@@ -64,7 +64,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >r4</TD>
+<TD >r1|r4</TD>
 <TD >3</TD>
 <TD >1</TD>
 <TD >0</TD>
@@ -80,7 +80,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >r3</TD>
+<TD >r1|r3</TD>
 <TD >3</TD>
 <TD >1</TD>
 <TD >0</TD>
@@ -96,7 +96,23 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >r2</TD>
+<TD >r1|r2</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >2</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >r1|r1</TD>
 <TD >3</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -113,14 +129,30 @@
 </TR>
 <TR >
 <TD >r1</TD>
+<TD >10</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >entradas</TD>
 <TD >3</TD>
+<TD >1</TD>
 <TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >1</TD>
 <TD >2</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
